Frontend Ronald Cabrera

--- a/angular-13/src/app/component/dropdown-collapse/dropdown-collapse.component.html
+++ b/angular-13/src/app/component/dropdown-collapse/dropdown-collapse.component.html
@@ -11,20 +11,12 @@
         <div class="button-group">
           <div class="d-inline-block" ngbDropdown>
             <button
-              class="
-                btn btn-primary
-                dropdown-toggle-icon-none
-                d-flex
-                align-items-center
-              "
+              class="btn btn-primary dropdown-toggle-icon-none d-flex align-items-center"
               id="dropdown1"
               ngbDropdownToggle
             >
               Primary
-              <i
-                class="feather-sm d-flex ms-2"
-                name="chevron-down"
-              ></i>
+              <i class="feather-sm d-flex ms-2" name="chevron-down"></i>
             </button>
             <div ngbDropdownMenu aria-labelledby="dropdown1">
               <button class="dropdown-item">Option 1</button>
@@ -34,20 +26,12 @@
           </div>
           <div class="d-inline-block" ngbDropdown>
             <button
-              class="
-                btn btn-danger
-                dropdown-toggle-icon-none
-                d-flex
-                align-items-center
-              "
+              class="btn btn-danger dropdown-toggle-icon-none d-flex align-items-center"
               id="dropdown2"
               ngbDropdownToggle
             >
               Danger
-              <i
-                class="feather-sm d-flex ms-2"
-                name="chevron-down"
-              ></i>
+              <i class="feather-sm d-flex ms-2" name="chevron-down"></i>
             </button>
             <div ngbDropdownMenu aria-labelledby="dropdown2">
               <button class="dropdown-item">Option 1</button>
@@ -58,20 +42,12 @@
 
           <div class="d-inline-block" ngbDropdown>
             <button
-              class="
-                btn btn-info
-                dropdown-toggle-icon-none
-                d-flex
-                align-items-center
-              "
+              class="btn btn-info dropdown-toggle-icon-none d-flex align-items-center"
               id="dropdown3"
               ngbDropdownToggle
             >
               Info
-              <i
-                class="feather-sm d-flex ms-2"
-                name="chevron-down"
-              ></i>
+              <i class="feather-sm d-flex ms-2" name="chevron-down"></i>
             </button>
             <div ngbDropdownMenu aria-labelledby="dropdown3">
               <button class="dropdown-item">Option 1</button>
@@ -81,20 +57,12 @@
           </div>
           <div class="d-inline-block" ngbDropdown>
             <button
-              class="
-                btn btn-warning
-                dropdown-toggle-icon-none
-                d-flex
-                align-items-center
-              "
+              class="btn btn-warning dropdown-toggle-icon-none d-flex align-items-center"
               id="dropdown4"
               ngbDropdownToggle
             >
               Warning
-              <i
-                class="feather-sm d-flex ms-2"
-                name="chevron-down"
-              ></i>
+              <i class="feather-sm d-flex ms-2" name="chevron-down"></i>
             </button>
             <div ngbDropdownMenu aria-labelledby="dropdown4">
               <button class="dropdown-item">Option 1</button>
@@ -104,20 +72,12 @@
           </div>
           <div class="d-inline-block" ngbDropdown>
             <button
-              class="
-                btn btn-success
-                dropdown-toggle-icon-none
-                d-flex
-                align-items-center
-              "
+              class="btn btn-success dropdown-toggle-icon-none d-flex align-items-center"
               id="dropdown5"
               ngbDropdownToggle
             >
               Success
-              <i
-                class="feather-sm d-flex ms-2"
-                name="chevron-down"
-              ></i>
+              <i class="feather-sm d-flex ms-2" name="chevron-down"></i>
             </button>
             <div ngbDropdownMenu aria-labelledby="dropdown5">
               <button class="dropdown-item">Option 1</button>
@@ -127,20 +87,12 @@
           </div>
           <div class="d-inline-block" ngbDropdown>
             <button
-              class="
-                btn btn-secondary
-                dropdown-toggle-icon-none
-                d-flex
-                align-items-center
-              "
+              class="btn btn-secondary dropdown-toggle-icon-none d-flex align-items-center"
               id="dropdown6"
               ngbDropdownToggle
             >
               Secondary
-              <i
-                class="feather-sm d-flex ms-2"
-                name="chevron-down"
-              ></i>
+              <i class="feather-sm d-flex ms-2" name="chevron-down"></i>
             </button>
             <div ngbDropdownMenu aria-labelledby="dropdown6">
               <button class="dropdown-item">Option 1</button>
@@ -180,20 +132,12 @@
         <div class="button-group">
           <div class="d-inline-block" ngbDropdown placement="top-end">
             <button
-              class="
-                btn btn-primary
-                dropdown-toggle-icon-none
-                d-flex
-                align-items-center
-              "
+              class="btn btn-primary dropdown-toggle-icon-none d-flex align-items-center"
               id="dropdown1"
               ngbDropdownToggle
             >
               Primary
-              <i
-                class="feather-sm d-flex ms-2"
-                name="chevron-up"
-              ></i>
+              <i class="feather-sm d-flex ms-2" name="chevron-up"></i>
             </button>
             <div ngbDropdownMenu aria-labelledby="dropdown1">
               <button class="dropdown-item">Option 1</button>
@@ -203,20 +147,12 @@
           </div>
           <div class="d-inline-block" ngbDropdown placement="top-end">
             <button
-              class="
-                btn btn-danger
-                dropdown-toggle-icon-none
-                d-flex
-                align-items-center
-              "
+              class="btn btn-danger dropdown-toggle-icon-none d-flex align-items-center"
               id="dropdown2"
               ngbDropdownToggle
             >
               Danger
-              <i
-                class="feather-sm d-flex ms-2"
-                name="chevron-up"
-              ></i>
+              <i class="feather-sm d-flex ms-2" name="chevron-up"></i>
             </button>
             <div ngbDropdownMenu aria-labelledby="dropdown2">
               <button class="dropdown-item">Option 1</button>
@@ -227,20 +163,12 @@
 
           <div class="d-inline-block" ngbDropdown placement="top-end">
             <button
-              class="
-                btn btn-info
-                dropdown-toggle-icon-none
-                d-flex
-                align-items-center
-              "
+              class="btn btn-info dropdown-toggle-icon-none d-flex align-items-center"
               id="dropdown3"
               ngbDropdownToggle
             >
               Info
-              <i
-                class="feather-sm d-flex ms-2"
-                name="chevron-up"
-              ></i>
+              <i class="feather-sm d-flex ms-2" name="chevron-up"></i>
             </button>
             <div ngbDropdownMenu aria-labelledby="dropdown3">
               <button class="dropdown-item">Option 1</button>
@@ -250,20 +178,12 @@
           </div>
           <div class="d-inline-block" ngbDropdown placement="top-end">
             <button
-              class="
-                btn btn-warning
-                dropdown-toggle-icon-none
-                d-flex
-                align-items-center
-              "
+              class="btn btn-warning dropdown-toggle-icon-none d-flex align-items-center"
               id="dropdown4"
               ngbDropdownToggle
             >
               Warning
-              <i
-                class="feather-sm d-flex ms-2"
-                name="chevron-up"
-              ></i>
+              <i class="feather-sm d-flex ms-2" name="chevron-up"></i>
             </button>
             <div ngbDropdownMenu aria-labelledby="dropdown4">
               <button class="dropdown-item">Option 1</button>
@@ -273,20 +193,12 @@
           </div>
           <div class="d-inline-block" ngbDropdown placement="top-end">
             <button
-              class="
-                btn btn-success
-                dropdown-toggle-icon-none
-                d-flex
-                align-items-center
-              "
+              class="btn btn-success dropdown-toggle-icon-none d-flex align-items-center"
               id="dropdown5"
               ngbDropdownToggle
             >
               Success
-              <i
-                class="feather-sm d-flex ms-2"
-                name="chevron-up"
-              ></i>
+              <i class="feather-sm d-flex ms-2" name="chevron-up"></i>
             </button>
             <div ngbDropdownMenu aria-labelledby="dropdown5">
               <button class="dropdown-item">Option 1</button>
@@ -296,20 +208,12 @@
           </div>
           <div class="d-inline-block" ngbDropdown placement="top-end">
             <button
-              class="
-                btn btn-secondary
-                dropdown-toggle-icon-none
-                d-flex
-                align-items-center
-              "
+              class="btn btn-secondary dropdown-toggle-icon-none d-flex align-items-center"
               id="dropdown6"
               ngbDropdownToggle
             >
               Secondary
-              <i
-                class="feather-sm d-flex ms-2"
-                name="chevron-up"
-              ></i>
+              <i class="feather-sm d-flex ms-2" name="chevron-up"></i>
             </button>
             <div ngbDropdownMenu aria-labelledby="dropdown6">
               <button class="dropdown-item">Option 1</button>
@@ -339,16 +243,10 @@
             aria-label="Button group with nested dropdown"
           >
             <button
-              class="
-                btn btn-primary
-                dropdown-toggle-split dropdown-toggle-icon-none
-              "
+              class="btn btn-primary dropdown-toggle-split dropdown-toggle-icon-none"
               ngbDropdownToggle
             >
-              <i
-                class="feather-sm d-flex"
-                name="chevron-down"
-              ></i>
+              <i class="feather-sm d-flex" name="chevron-down"></i>
             </button>
             <div class="dropdown-menu" ngbDropdownMenu>
               <button ngbDropdownItem>One</button>
@@ -367,16 +265,10 @@
             aria-label="Button group with nested dropdown"
           >
             <button
-              class="
-                btn btn-danger
-                dropdown-toggle-split dropdown-toggle-icon-none
-              "
+              class="btn btn-danger dropdown-toggle-split dropdown-toggle-icon-none"
               ngbDropdownToggle
             >
-              <i
-                class="feather-sm d-flex"
-                name="chevron-down"
-              ></i>
+              <i class="feather-sm d-flex" name="chevron-down"></i>
             </button>
             <div class="dropdown-menu" ngbDropdownMenu>
               <button ngbDropdownItem>One</button>
@@ -395,16 +287,10 @@
             aria-label="Button group with nested dropdown"
           >
             <button
-              class="
-                btn btn-info
-                dropdown-toggle-split dropdown-toggle-icon-none
-              "
+              class="btn btn-info dropdown-toggle-split dropdown-toggle-icon-none"
               ngbDropdownToggle
             >
-              <i
-                class="feather-sm d-flex"
-                name="chevron-down"
-              ></i>
+              <i class="feather-sm d-flex" name="chevron-down"></i>
             </button>
             <div class="dropdown-menu" ngbDropdownMenu>
               <button ngbDropdownItem>One</button>
@@ -423,16 +309,10 @@
             aria-label="Button group with nested dropdown"
           >
             <button
-              class="
-                btn btn-warning
-                dropdown-toggle-split dropdown-toggle-icon-none
-              "
+              class="btn btn-warning dropdown-toggle-split dropdown-toggle-icon-none"
               ngbDropdownToggle
             >
-              <i
-                class="feather-sm d-flex"
-                name="chevron-down"
-              ></i>
+              <i class="feather-sm d-flex" name="chevron-down"></i>
             </button>
             <div class="dropdown-menu" ngbDropdownMenu>
               <button ngbDropdownItem>One</button>
@@ -451,16 +331,10 @@
             aria-label="Button group with nested dropdown"
           >
             <button
-              class="
-                btn btn-success
-                dropdown-toggle-split dropdown-toggle-icon-none
-              "
+              class="btn btn-success dropdown-toggle-split dropdown-toggle-icon-none"
               ngbDropdownToggle
             >
-              <i
-                class="feather-sm d-flex"
-                name="chevron-down"
-              ></i>
+              <i class="feather-sm d-flex" name="chevron-down"></i>
             </button>
             <div class="dropdown-menu" ngbDropdownMenu>
               <button ngbDropdownItem>One</button>
@@ -479,16 +353,10 @@
             aria-label="Button group with nested dropdown"
           >
             <button
-              class="
-                btn btn-secondary
-                dropdown-toggle-split dropdown-toggle-icon-none
-              "
+              class="btn btn-secondary dropdown-toggle-split dropdown-toggle-icon-none"
               ngbDropdownToggle
             >
-              <i
-                class="feather-sm d-flex"
-                name="chevron-down"
-              ></i>
+              <i class="feather-sm d-flex" name="chevron-down"></i>
             </button>
             <div class="dropdown-menu" ngbDropdownMenu>
               <button ngbDropdownItem>One</button>
