--- a/angular-13/src/app/component/alert/alert.component.html
+++ b/angular-13/src/app/component/alert/alert.component.html
@@ -1,189 +1,103 @@
 <div class="row">
-  <div class="col-lg-12">
-    <!-- ==================================-->
-    <!-- ========== Basic Alert ========== -->
-    <!-- ==================================-->
-    <div class="card w-100">
-      <div class="p-3">
-        <h4 class="card-title mb-0">Basic Alert</h4>
-      </div>
-      <div class="card-body border-top">
-        <p *ngFor="let alert of alerts">
-          <ngb-alert [type]="alert.type" [dismissible]="false" class="customize-alert fs-5">
-            {{ alert.type }} - {{ alert.message }}
-          </ngb-alert>
-        </p>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-12">
-    <!-- ==================================-->
-    <!-- ======== Outline Alert ========= -->
-    <!-- ==================================-->
+  <!-- ==================================-->
+  <!-- ======= Basic Nav ===== -->
+  <!-- ==================================-->
+  <div class="col-12">
     <div class="card">
       <div class="p-3">
-        <h4 class="card-title mb-0">Outline Alert</h4>
+        <h4 class="card-title mb-0">Juegos Por Tienda</h4>
       </div>
       <div class="card-body border-top">
-        <ngb-alert
-          class="
-            bg-transparent
-            border-primary border
-            text-primary
-            d-flex
-            align-items-center
-            fs-5
-          "
-        >
-          <i
-            name="Info"
-            class="feather-sm flex-shrink-0 d-flex me-2"
-          ></i>
-          A simple primary light alert
-        </ngb-alert>
-        <ngb-alert
-          class="
-            bg-transparent
-            border-secondary border
-            text-secondary
-            d-flex
-            align-items-center
-            fs-5
-          "
-        >
-          <i
-            name="Info"
-            class="feather-sm flex-shrink-0 d-flex me-2"
-          ></i>
-          A simple secondary light alert
-        </ngb-alert>
-        <ngb-alert
-          class="
-            bg-transparent
-            border-success border
-            text-success
-            d-flex
-            align-items-center
-            fs-5
-          "
-        >
-          <i
-            name="Info"
-            class="feather-sm flex-shrink-0 d-flex me-2"
-          ></i>
-          A simple success light alert
-        </ngb-alert>
-        <ngb-alert
-          class="
-            bg-transparent
-            border-danger border
-            text-danger
-            d-flex
-            align-items-center
-            fs-5
-          "
-        >
-          <i
-            name="Info"
-            class="feather-sm flex-shrink-0 d-flex me-2"
-          ></i>
-          A simple danger light alert
-        </ngb-alert>
-        <ngb-alert
-          class="
-            bg-transparent
-            border-warning border
-            text-warning
-            d-flex
-            align-items-center
-            fs-5
-          "
-        >
-          <i
-            name="Info"
-            class="feather-sm flex-shrink-0 d-flex me-2"
-          ></i>
-          A simple warning light alert
-        </ngb-alert>
-        <ngb-alert
-          class="
-            bg-transparent
-            border-info border
-            text-info
-            d-flex
-            align-items-center
-            fs-5
-          "
-        >
-          <i
-            name="Info"
-            class="feather-sm flex-shrink-0 d-flex me-2"
-          ></i>
-          A simple info light alert
-        </ngb-alert>
-      </div>
-    </div>
-  </div>
+        <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs">
+          <li [ngbNavItem]="1">
+            <a ngbNavLink>Eneba</a>
+            <ng-template ngbNavContent>
+              <div class="row">
+                <div
+                  class="col-md-6 col-lg-3"
+                  *ngFor="let blogcard of enebaShop"
+                >
+                  <div class="card">
+                    <img
+                      [src]="blogcard.pictureLink"
+                      alt="blogs"
+                      class="card-img-top"
+                      width="300"
+                      height="150"
+                    />
+                    <div class="card-body">
+                      <h4 class="card-title">{{ blogcard.title }}</h4>
+                      <h6 class="card-subtitle">
+                        Tienda: {{ blogcard.shopName }}
+                      </h6>
+                      <h6 class="card-subtitle">
+                        Precio: ${{ blogcard.price }}
+                      </h6>
+                      <a href="{{ blogcard.linkToShop }}">
+                        <button type="button" class="btn btn-primary">
+                          Ir al sitio
+                        </button>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </ng-template>
+          </li>
+          <li [ngbNavItem]="2">
+            <a ngbNavLink>GOG</a>
+            <ng-template ngbNavContent>
+              <div class="row">
+                <div class="col-md-6 col-lg-3" *ngFor="let blogcard of gogShop">
+                  <div class="card">
+                    <img
+                      [src]="blogcard.pictureLink"
+                      alt="blogs"
+                      class="card-img-top"
+                      width="300"
+                      height="150"
+                    />
+                    <div class="card-body">
+                      <h4 class="card-title">{{ blogcard.title }}</h4>
+                      <h6 class="card-subtitle">
+                        Tienda: {{ blogcard.shopName }}
+                      </h6>
+                      <h6 class="card-subtitle">
+                        Precio: ${{ blogcard.price }}
+                      </h6>
+                      <a href="{{ blogcard.linkToShop }}">
+                        <button type="button" class="btn btn-primary">
+                          Ir al sitio
+                        </button>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </ng-template>
+          </li>
+          <li [ngbNavItem]="3">
+            <a ngbNavLink>Steam</a>
+            <ng-template ngbNavContent>
+              <p>
+                Sed commodo, leo at suscipit dictum, quam est porttitor sapien,
+                eget sodales nibh elit id diam. Nulla facilisi. Donec egestas
+                ligula vitae odio interdum aliquet. Duis lectus turpis, luctus
+                eget tincidunt eu, congue et odio. Duis pharetra et nisl at
+                faucibus. Quisque luctus pulvinar arcu, et molestie lectus
+                ultrices et. Sed diam urna, egestas ut ipsum vel, volutpat
+                volutpat neque. Praesent fringilla tortor arcu. Vivamus faucibus
+                nisl enim, nec tristique ipsum euismod facilisis. Morbi ut
+                bibendum est, eu tincidunt odio. Orci varius natoque penatibus
+                et magnis dis parturient montes, nascetur ridiculus mus. Mauris
+                aliquet odio ac lorem aliquet ultricies in eget neque. Phasellus
+                nec tortor vel tellus pulvinar feugiat.
+              </p>
+            </ng-template>
+          </li>
+        </ul>
 
-  <div class="col-lg-12">
-    <!-- ==================================-->
-    <!-- ======= Self Closable Alert ===== -->
-    <!-- ==================================-->
-    <div class="card">
-      <div class="p-3">
-        <h4 class="card-title mb-0">Self Closing Alert</h4>
-      </div>
-      <div class="card-body border-top">
-        <h6 class="card-subtitle fw-normal mb-3">
-          Static self-closing alert that disappears after 20 seconds (refresh
-          the page if it has already disappeared)
-        </h6>
-        <ngb-alert type="info" class="font-medium fs-5" *ngIf="!staticAlertClosed" (close)="staticAlertClosed = true"
-          >Check out our awesome new features!</ngb-alert
-        >
-        <p>
-          Show a self-closing success message that disappears after 5 seconds.
-        </p>
-        <ngb-alert
-          *ngIf="successMessage"
-          type="success" class="font-medium fs-5"
-          (close)="successMessage = null"
-          >{{ successMessage }}</ngb-alert
-        >
-        <p>
-          <button class="btn btn-primary" (click)="changeSuccessMessage()">
-            Change message
-          </button>
-        </p>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-12">
-    <!-- ==================================-->
-    <!-- ======= Custom Alert ===== -->
-    <!-- ==================================-->
-    <div class="card">
-      <div class="p-3">
-        <h4 class="card-title mb-0">Custom Alert</h4>
-      </div>
-      <div class="card-body border-top">
-        <ngb-alert type="custom" [dismissible]="false"
-          ><strong>Whoa!</strong> This is a custom alert.</ngb-alert
-        >
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="p-3">
-        <h4 class="card-title mb-0">Global Configuration of Alert</h4>
-      </div>
-      <div class="card-body border-top">
-        <p>
-          <ngb-alert type="secondary" class="font-medium fs-5">
-            This alert's type is success and it's not dismissible because the
-            config has been customized
-          </ngb-alert>
-        </p>
+        <div [ngbNavOutlet]="nav" class="mt-2"></div>
       </div>
     </div>
   </div>
