--- a/angular-13/src/app/about/about.component.html
+++ b/angular-13/src/app/about/about.component.html
@@ -1,43 +1,2 @@
-<form id="nav-search-bar-form" accept-charset="utf-8" action="/s/ref=nb_sb_noss_2" class="nav-searchbar nav-progressive-attribute" method="GET" name="site-search" role="search">
-
-    <div class="nav-left">
-      <div id="nav-search-dropdown-card">
-        
-  <div class="nav-search-scope nav-sprite">
-    <div class="nav-search-facade" data-value="search-alias=aps">
-      <span id="nav-search-label-id" class="nav-search-label nav-progressive-content" style="width: auto;">¿Qué tienes pensado jugar hoy?</span>
-      <i class="nav-icon"></i>
-    </div>
-    <label id="searchDropdownDescription" for="searchDropdownBox" class="nav-progressive-attribute" style="display:none">Select the department you want to search in</label>
-    <select aria-describedby="searchDropdownDescription" class="nav-search-dropdown searchSelect nav-progressive-attrubute nav-progressive-search-dropdown" data-nav-digest="k+fyIAyB82R9jVEmroQ0OWwSW3A=" data-nav-selected="0" id="searchDropdownBox" name="url" style="display: block; top: 2.5px;" tabindex="0" title="Search in">
-        <option selected="selected" value="search-alias=aps">Todas las tiendas</option>
-        <option value="search-alias=arts-crafts-intl-ship">Steam</option>
-        <option value="search-alias=automotive-intl-ship">Gog</option>
-        <option value="search-alias=baby-products-intl-ship">Epic</option>
-        <option value="search-alias=baby-products-intl-ship">Un jugador</option>
-        <option value="search-alias=baby-products-intl-ship">Multijugador</option>
-    </select>
-  </div>
-
-      </div>
-    </div>
-    <div class="nav-fill">
-      <div class="nav-search-field ">
-        <label for="twotabsearchtextbox" style="display: none;"></label>
-        <input id="inputId" type="text" value="" name="field-keywords" autocomplete="off" placeholder="" class="nav-input nav-progressive-attribute" dir="auto" tabindex="0" aria-label="Search Amazon" spellcheck="false">
-      </div>
-      <div id="nav-iss-attach"></div>
-    </div>
-    <div class="nav-right">
-      <div class="nav-search-submit nav-sprite">
-        <span id="enlace" class="nav-search-submit-text nav-sprite nav-progressive-attribute" aria-label="Go">
-         <a >
-            <button id="miBoton" type="button" class="btn btn-primary"> Go </button>
-          </a>
-        </span>
-      </div>
-    </div>
-    
-    
-
-</form>
+<input type="text" #nombre>
+<button (click)="buscar(nombre.value)">Saludar</button>
