Tiendas disponibles added

--- a/angular-13/src/app/shared/header/navigation.component.html
+++ b/angular-13/src/app/shared/header/navigation.component.html
@@ -9,7 +9,7 @@
     <a class="nav-link waves-effect waves-dark" href="/about"> Buscar </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link waves-effect waves-dark" href="/about"> Tiendas disponibles </a>
+    <a class="nav-link waves-effect waves-dark" href="././component/nav"> Tiendas disponibles </a>
   </li>
   <!-- ============================================================== -->
   <!-- create new -->
