--- a/angular-13/src/app/component/nav/nav.component.html
+++ b/angular-13/src/app/component/nav/nav.component.html
@@ -2,10 +2,10 @@
   <!-- ==================================-->
   <!-- ======= Basic Nav ===== -->
   <!-- ==================================-->
-  <div class="col-12">
+  <!-- <div class="col-12">
     <div class="card">
       <div class="p-3">
-        <h4 class="card-title mb-0">Basic Nav</h4>
+        <h4 class="card-title mb-0">¿Cuales tiendas hay?</h4>
       </div>
       <div class="card-body border-top">
         <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs">
@@ -65,11 +65,11 @@
         <div [ngbNavOutlet]="nav" class="mt-2"></div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- ==================================-->
   <!-- ======= Alternative markup ===== -->
   <!-- ==================================-->
-  <div class="col-12">
+  <!-- <div class="col-12">
     <div class="card">
       <div class="p-3">
         <h4 class="card-title mb-0">Alternative markup</h4>
@@ -136,21 +136,19 @@
         <div [ngbNavOutlet]="navAM" class="mt-2"></div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- ==================================-->
   <!-- ======= Vertical pills ===== -->
   <!-- ==================================-->
   <div class="col-12">
     <div class="card">
       <div class="p-3">
-        <h4 class="card-title mb-0">Vertical pills</h4>
+        <h4 class="card-title mb-0">¿Qué tiendas hay?</h4>
       </div>
       <div class="card-body border-top">
         <h6 class="card-subtitle mb-3">
-          You should use <code>class="nav-pills"</code> if you need pills and
-          the <code>[orientation]</code> input to change nav orientation
+          Las tiendas que puedes encontrar aquí son:
         </h6>
-
         <div class="d-flex">
           <ul
             ngbNav
@@ -160,55 +158,67 @@
             orientation="vertical"
           >
             <li ngbNavItem="top">
-              <a ngbNavLink>Top</a>
+              <a ngbNavLink>STEAM</a>
               <ng-template ngbNavContent>
-                <p>
-                  Raw denim you probably haven't heard of them jean shorts
-                  Austin. Nesciunt tofu stumptown aliqua, retro synth master
-                  cleanse. Mustache cliche tempor, williamsburg carles vegan
-                  helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher
-                  synth. Cosby sweater eu banh mi, qui irure terry richardson ex
-                  squid. Aliquip placeat salvia cillum iphone. Seitan aliquip
-                  quis cardigan american apparel, butcher voluptate nisi qui.
-                </p>
+                <div class="col-12">
+                <img 
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Steam_icon_logo.svg/2048px-Steam_icon_logo.svg.png"
+                  width="100" 
+                  style="height:auto;">
+                  <p>
+                    Steam es una plataforma de distribución digital de videojuegos 
+                    desarrollada por Valve Corporation. Fue lanzada en septiembre de 
+                    2003 como una forma para Valve de proveer actualizaciones automáticas
+                    a sus juegos, pero finalmente se amplió para incluir juegos de terceros
+                  </p>
+                  <a href="https://store.steampowered.com/?l=spanish">
+                    <button type="button" class="btn btn-outline-primary"> Ir al sitio </button>
+                  </a>
+              </div>
               </ng-template>
             </li>
             <li ngbNavItem="2">
-              <a ngbNavLink>Middle</a>
+              <a ngbNavLink>ENEBA</a>
               <ng-template ngbNavContent>
-                <p>
-                  Exercitation +1 labore velit, blog sartorial PBR leggings next
-                  level wes anderson artisan four loko farm-to-table craft beer
-                  twee. Qui photo booth letterpress, commodo enim craft beer
-                  mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo
-                  nostrud organic, assumenda labore aesthetic magna delectus
-                  mollit. Keytar helvetica VHS salvia yr, vero magna velit
-                  sapiente labore stumptown. Vegan fanny pack odio cillum wes
-                  anderson 8-bit, sustainable jean shorts beard ut DIY ethical
-                  culpa terry richardson biodiesel. Art party scenester
-                  stumptown, tumblr butcher vero sint qui sapiente accusamus
-                  tattooed echo park.
-                </p>
+                <div class="col-12">
+                  <img 
+                    src="https://cdn.eneba.com/branding/v2/logo.png"
+                    width="100" 
+                    style="height:auto;">
+                    <p>
+                      Eneba es una tienda online donde se pueden adquirir toda clase
+                       de videojuegos digitales. Desde deportes hasta acción, aquí 
+                       encontrarás cientos de opciones interesantes para Xbox, PSN y 
+                       PC. Entre los más populares está Overwatch, Fortnite, FIFA 21, 
+                       Skyrim y más de 2000 juegos que puedes comprar a menos de 3 dólares.
+                    </p>
+                    <a href="https://www.eneba.com/latam/">
+                      <button type="button" class="btn btn-outline-primary"> Ir al sitio </button>
+                    </a>
+                </div>
               </ng-template>
             </li>
             <li ngbNavItem="3">
-              <a ngbNavLink>Bottom</a>
+              <a ngbNavLink>GOG</a>
               <ng-template ngbNavContent>
-                <p>
-                  Sed commodo, leo at suscipit dictum, quam est porttitor
-                  sapien, eget sodales nibh elit id diam. Nulla facilisi. Donec
-                  egestas ligula vitae odio interdum aliquet. Duis lectus
-                  turpis, luctus eget tincidunt eu, congue et odio. Duis
-                  pharetra et nisl at faucibus. Quisque luctus pulvinar arcu, et
-                  molestie lectus ultrices et. Sed diam urna, egestas ut ipsum
-                  vel, volutpat volutpat neque. Praesent fringilla tortor arcu.
-                  Vivamus faucibus nisl enim, nec tristique ipsum euismod
-                  facilisis. Morbi ut bibendum est, eu tincidunt odio. Orci
-                  varius natoque penatibus et magnis dis parturient montes,
-                  nascetur ridiculus mus. Mauris aliquet odio ac lorem aliquet
-                  ultricies in eget neque. Phasellus nec tortor vel tellus
-                  pulvinar feugiat.
-                </p>
+                <div class="col-12">
+                  <img 
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/GOG.com_logo.svg/1669px-GOG.com_logo.svg.png"
+                    width="100" 
+                    style="height:auto;">
+                    <p>
+                      GOG de sus iniciales Good Old Games, es una plataforma 
+                      para comprar videojuegos de las muchas que existen hoy 
+                      en día. Pertenece a CD Projekt conocidos por videojuegos 
+                      como la saga The Witcher o Cyberpunk 2077, y que inicialmente 
+                      se dedicaba, como su propio nombre indica, a distribuir videojuegos
+                      antiguos para hacerlos funcionar en equipos nuevos. GOG vende videojuegos 
+                      de muchos desarrolladores y va añadiendo cada vez más contenido.
+                    </p>
+                    <a href="https://www.gog.com/">
+                      <button type="button" class="btn btn-outline-primary"> Ir al sitio </button>
+                    </a>
+                </div>
               </ng-template>
             </li>
           </ul>
