--- a/angular-13/src/app/layouts/full/full.component.scss
+++ b/angular-13/src/app/layouts/full/full.component.scss
@@ -2,3 +2,15 @@
   max-width: 1440px;
   margin: 0 auto;
 }
+
+.dark-logo {
+  height: 40px;
+  width: 40px;
+  margin-left: 10px;
+}
+
+.dark-text {
+  height: 20px;
+  width: 180px;
+  margin-right: -10px;
+}
