Cartitas en buscar pero supervisado por Rommel

--- a/angular-13/src/app/about/about.component.html
+++ b/angular-13/src/app/about/about.component.html
@@ -1,2 +1,2 @@
 <input type="text" #nombre>
-<button (click)="buscar(nombre.value)">Saludar</button>
+<button (click)="buscar(nombre.value)">Buscar</button>
